syntax = "proto3";

option go_package = "./;config";

package functions_config_types;

message MultiPluginConfig {
  bytes functions_plugin_config = 1;
  bytes threshold_plugin_config = 2;
}